--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_16372396
 pandas==1.4.2
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
 pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow==10.0.1
+pillow>=10.3.0
 prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1649130487073/work
 psutil @ file:///D:/bld/psutil_1648873130737/work
 pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
